@@ -18,6 +18,7 @@
   * Added XML::Node#create_internal_subset
   * XML Builder can append raw strings (GH #141, patch from dudleyf)
   * XML::SAX::ParserContext added
+  * XML::Document#remove_namespaces! for the namespace-impaired
 
 * Bugfixes
 
